# FFmpegPlayer

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/mik/ffmpegplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FFmpegAudio.cpp  FFmpegAudio.h  FFmpegVideo.cpp  FFmpegVideo.h  Log.h  MikPlayer.cpp  MikRtmp.cpp
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/mik/ffmpegplayer/: LiveStateChangeListener.java  MainActivity.java  MikPlayer.java  PlayerActivity.java  RtmpActivity.java
app/src/main/java/com/mik/ffmpegplayer/params/: AudioParams.java  VideoParams.java
app/src/main/java/com/mik/ffmpegplayer/push/: AudioPush.java  LivePush.java  PushNative.java  Pusher.java  VideoPush.java
app/src/main/res/layout/: activity_main.xml  live_activity.xml  player.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/mik/ffmpegplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
